feat: update alfred theme
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/alfred/Alfred.alfredpreferences/preferences/local/76dea24b85c7d1aae6c5c242975a4c24f3c76055/appearance/prefs.plist
+++ b/alfred/Alfred.alfredpreferences/preferences/local/76dea24b85c7d1aae6c5c242975a4c24f3c76055/appearance/prefs.plist
@@ -5,6 +5,6 @@
 	<key>darkthemeuid</key>
 	<string>theme.bundled.osxdark</string>
 	<key>lightthemeuid</key>
-	<string>theme.bundled.osx</string>
+	<string>theme.fileimport.BFDADA05-A4F9-46B7-A221-88CC7917532F</string>
 </dict>
 </plist>
