--- a/alfred/Alfred.alfredpreferences/workflows/user.workflow.D328F907-9473-49D2-8976-4D1916A4A9BA/info.plist
+++ b/alfred/Alfred.alfredpreferences/workflows/user.workflow.D328F907-9473-49D2-8976-4D1916A4A9BA/info.plist
@@ -55,7 +55,7 @@
 	<key>disabled</key>
 	<false/>
 	<key>name</key>
-	<string>TailwindCSS Docs</string>
+	<string>TailwindCSSDocs</string>
 	<key>objects</key>
 	<array>
 		<dict>
@@ -241,15 +241,15 @@
 				<key>runningsubtext</key>
 				<string>Searching docs for "{query}"...</string>
 				<key>script</key>
-				<string>php beta_tailwindcss.php "{query}"</string>
+				<string>php v1_tailwindcss.php "{query}"</string>
 				<key>scriptargtype</key>
 				<integer>0</integer>
 				<key>scriptfile</key>
 				<string></string>
 				<key>subtext</key>
-				<string>Search the TailwindCSS Beta docs...</string>
+				<string>Search the TailwindCSS v1 docs...</string>
 				<key>title</key>
-				<string>TailwindCSS Beta</string>
+				<string>TailwindCSS v1</string>
 				<key>type</key>
 				<integer>0</integer>
 				<key>withspace</key>
@@ -268,23 +268,22 @@
 
 ## Usage
 
-
-Just type `tw` followed by your search query.
+To search the [v2 docs](https://tailwindcss.com/docs), just type `tw` followed by your search query.
 
 ```
 tw &lt;query&gt;
+```
+
+To search the [v1 docs](https://v1.tailwindcss.com/docs), just type `tw1` followed by your search query.
+
+```
+tw1 &lt;query&gt;
 ```
 
 To search the [v0 docs](https://v0.tailwindcss.com/docs), just type `tw0` followed by your search query.
 
 ```
 tw0 &lt;query&gt;
-```
-
-To search the [beta docs](https://next.tailwindcss.com/docs), just type `twb` followed by your search query.
-
-```
-twb &lt;query&gt;
 ```
 
 Either press `⌘Y` to Quick Look the result, or press `&lt;enter&gt;` to open it in your web browser.</string>
@@ -336,8 +335,8 @@ Either press `⌘Y` to Quick Look the result, or press `&lt;enter&gt;` to open i
 	<key>variablesdontexport</key>
 	<array/>
 	<key>version</key>
-	<string>1.1.1</string>
+	<string>2.0.0</string>
 	<key>webaddress</key>
-	<string>https://github.com/clnt</string>
+	<string>https://github.com/clnt/alfred-tailwindcss-docs</string>
 </dict>
 </plist>
