--- a/.yarnrc
+++ b/.yarnrc
@@ -2,6 +2,7 @@
 # yarn lockfile v1
 
 
+registry "https://registry.npmjs.org"
 "--global.latest" true
 email logan@mcan.sh
 init-author-email logan@mcan.sh
@@ -9,11 +10,9 @@ init-author-name "Logan McAnsh"
 init-author-url "https://mcan.sh"
 init-license MIT
 init-version "1.0.0"
-lastUpdateCheck 1621107347884
+lastUpdateCheck 1629928230897
 save-exact true
 save-prefix ""
-unsafe-disable-integrity-migration false
-username mcansh
 version-git-message "%s"
 version-git-sign true
 version-tag-prefix ""
