--- a/.npmrc
+++ b/.npmrc
@@ -19,15 +19,12 @@ tag-version-prefix=""
 preid="canary"
 
 # defaults for npm init
-init-author-name=Logan McAnsh
-init-author-email=logan@mcan.sh
-init-author-url=https://mcan.sh/
-init-version=1.0.0
-init-license=MIT
-
-# scripts-prepend-node-path=true
+init-author-name="Logan McAnsh"
+init-author-email="logan@mcan.sh"
+init-author-url="https://mcan.sh"
+init-version="1.0.0"
+init-license="MIT"
 
 # Sign all the things with GPG
 sign-git-commit=true
 sign-git-tag=true
-
