--- a/.gitconfig
+++ b/.gitconfig
@@ -39,7 +39,7 @@
 [commit]
 	gpgsign = true
 [gpg]
-	program = /usr/local/bin/gpg
+	program = /opt/homebrew/opt/gnupg@2.2/bin/gpg
 [core]
 	excludesfile = /Users/loganmcansh/.gitignore_global
 	editor = code-insiders --wait
