--- a/.npmrc
+++ b/.npmrc
@@ -1,6 +1,6 @@
 # Registries
-@mcansh:registry=https://npm.pkg.github.com
-@remix-run:registry=https://npm.remix.run
+# @mcansh:registry=https://npm.pkg.github.com
+# @remix-run:registry=https://npm.remix.run
 //npm.pkg.github.com/:_authToken=${GITHUB_REGISTRY_TOKEN}
 //registry.npmjs.org/:_authToken=${NPM_REGISTRY_TOKEN}
 //npm.remix.run/:_authToken=${REMIX_TOKEN}
@@ -28,3 +28,6 @@ init-license="MIT"
 # Sign all the things with GPG
 sign-git-commit=true
 sign-git-tag=true
+
+# enough of `npm install --legacy-peer-deps` already
+legacy-peer-deps=true
