chore: basic config updates
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,7 @@
 [user]
 	name = Logan McAnsh
 	email = logan@mcan.sh
-	signingkey = D826A722D0D9BAC5
+	signingkey = FE5D41659C3380A38D7D5F46D95FA9E238EBF95D
 [push]
 	default = current
 [alias]
@@ -41,7 +41,7 @@
 [gpg]
 	program = gpg
 [core]
-	excludesfile = /Users/loganmcansh/.dotfiles/.global_gitignore
+	excludesfile = /Users/logan/.gitignore_global
 	editor = code-insiders --wait
 	ignorecase = false
 	pager = delta
@@ -93,3 +93,5 @@
 	rebase = true
 [init]
 	defaultBranch = main
+[tag]
+	gpgSign = true
