chore: fix functions
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/.npmrc
+++ b/.npmrc
@@ -18,7 +18,7 @@ tag-version-prefix=
 # defaults for npm init
 init-author-name=Logan McAnsh
 init-author-email=logan@mcan.sh
-init-author-url=https://mcan.sh/
+init-author-url=https://mcan.sh
 init-version=0.1.0
 init-license=MIT
 
