--- a/.npmrc
+++ b/.npmrc
@@ -6,8 +6,8 @@
 //npm.remix.run/:_authToken=${REMIX_TOKEN}
 
 # save exact package version instead of semver range
-save-exact=true
-save-prefix=
+# save-exact=true
+# save-prefix=
 
 # commit message which is used by npm version when creating version commit.
 message=%s
