--- a/ghostty.config
+++ b/ghostty.config
@@ -1,11 +1,17 @@
-font-family = Berkeley Mono Variable
+
+font-family = "Berkeley Mono Variable"
 window-padding-x = 10
 window-padding-y = 4
 window-colorspace = display-p3
-background-opacity = 0.9
-background-blur-radius = 20
-window-height = 25
-window-width = 80
+# background-opacity = 0.9
+# background-blur-radius = 10
+font-size = 11
+window-height = 24
+window-width = 78
 mouse-hide-while-typing = true
 # macos-titlebar-style = native
-window-inherit-working-directory = false
+# window-inherit-working-directory = false
+keybind = super+enter=ignore
+auto-update = download
+auto-update-channel = tip
+macos-icon-frame = chrome
