--- a/ghostty.config
+++ b/ghostty.config
@@ -1,17 +1,42 @@
 
 font-family = "Berkeley Mono Variable"
+font-thicken = true
 window-padding-x = 10
 window-padding-y = 4
 window-colorspace = display-p3
-# background-opacity = 0.9
-# background-blur-radius = 10
+background-opacity = 0.9
+background-blur-radius = 10
 font-size = 11
 window-height = 24
 window-width = 78
 mouse-hide-while-typing = true
-# macos-titlebar-style = native
-# window-inherit-working-directory = false
+macos-titlebar-style = native
+window-inherit-working-directory = false
 keybind = super+enter=ignore
 auto-update = download
 auto-update-channel = tip
-macos-icon-frame = chrome
+macos-icon-frame = beige
+
+theme = GitHub-Light-Default
+background = #ffffff
+foreground = #1f2328
+selection-background = #1f2328
+selection-foreground = #ffffff
+cursor-color = #0969da
+cursor-text = #0969da
+palette = 0=#24292f
+palette = 1=#cf222e
+palette = 2=#116329
+palette = 3=#4d2d00
+palette = 4=#0969da
+palette = 5=#8250df
+palette = 6=#1b7c83
+palette = 7=#6e7781
+palette = 8=#57606a
+palette = 9=#a40e26
+palette = 10=#1a7f37
+palette = 11=#633c01
+palette = 12=#218bff
+palette = 13=#a475f9
+palette = 14=#3192aa
+palette = 15=#8c959f
