chore: use zed ai

--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -14,8 +14,8 @@
   "base_keymap": "VSCode",
   "assistant": {
     "default_model": {
-      "provider": "copilot_chat",
-      "model": "gpt-4o"
+      "provider": "zed.dev",
+      "model": "claude-3-7-sonnet-thinking-latest"
     },
     "version": "2"
   },
