--- a/.config/zed/settings_backup.json
+++ b/.config/zed/settings_backup.json
@@ -14,13 +14,13 @@
   "base_keymap": "VSCode",
   "assistant": {
     "default_model": {
-      "provider": "copilot_chat",
-      "model": "gpt-4o"
+      "provider": "zed.dev",
+      "model": "claude-3-7-sonnet-thinking-latest"
     },
     "version": "2"
   },
   "features": {
-    "inline_completion_provider": "copilot"
+    "edit_prediction_provider": "copilot"
   },
   "ui_font_size": 14,
   "buffer_font_size": 14,
@@ -105,6 +105,12 @@
           "arguments": ["--stdin-filepath", "{buffer_path}"]
         }
       }
+    }
+  },
+  "formatter": {
+    "external": {
+      "command": "prettier",
+      "arguments": ["--stdin-filepath", "{buffer_path}"]
     }
   }
 }
