Refactor and update configuration files and scripts
- Updated commit-msg hook to ensure proper signature inclusion.
- Modified .gitconfig to specify GPG program and enable backup for merge tools.
- Cleaned up .npmrc by removing commented-out lines and unnecessary configurations.
- Expanded Brewfile with additional taps and packages, including various utilities and VSCode extensions.
- Adjusted RectangleConfig.json for improved formatting and organization of settings.
- Added uv.env.fish to source environment variables for Fish shell.
- Enhanced fish/config.fish to set DOCKER_TAG_NAME based on current directory and branch.
- Updated fish_variables with new git branch information.
- Created load_uwm_certs.fish function to load UWM certificates based on terminal type.
- Refined n-cleanup.mjs for better readability and consistency in node version management.
- Fixed import statement in on-login/index.mjs for consistency.
- Corrected command syntax in set-random-color.mjs for Apple color settings.
- Cleaned up keymap.json in zed to ensure proper formatting.
- Updated binary lock file for prompts-library-db.0.mdb.
- Enhanced zed settings.json to include new inline assistant model and updated prediction provider.

Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -13,6 +13,10 @@
   "restore_on_startup": "none",
   "base_keymap": "Atom",
   "agent": {
+    "inline_assistant_model": {
+      "provider": "zed.dev",
+      "model": "claude-opus-4-1"
+    },
     "default_model": {
       "provider": "zed.dev",
       "model": "claude-sonnet-4"
@@ -23,7 +27,7 @@
     }
   },
   "features": {
-    "edit_prediction_provider": "copilot",
+    "edit_prediction_provider": "zed"
   },
   "ui_font_size": 14,
   "buffer_font_size": 14,
