--- a/.gitconfig
+++ b/.gitconfig
@@ -112,9 +112,10 @@
 	gpgSign = true
 
 [gpg]
-  format = ssh
+	format = ssh
+	program = /usr/local/bin/gpg
 [gpg "ssh"]
-  program = "/Applications/1Password.app/Contents/MacOS/op-ssh-sign"
+	program = /Applications/1Password.app/Contents/MacOS/op-ssh-sign
 [merge]
 	tool = code-insiders
 [mergetool "code-insiders"]
@@ -123,3 +124,5 @@
 	tool = code-insiders
 [difftool "code-insiders"]
 	cmd = code-insiders --new-window --wait --diff $LOCAL $REMOTE
+[mergetool]
+	keepBackup = true
