--- a/RectangleConfig.json
+++ b/RectangleConfig.json
@@ -1,190 +1,182 @@
 {
-  "bundleId" : "com.knollsoft.Rectangle",
-  "defaults" : {
-    "allowAnyShortcut" : {
-      "bool" : false
+  "bundleId": "com.knollsoft.Rectangle",
+  "defaults": {
+    "allowAnyShortcut": {
+      "bool": false
     },
-    "almostMaximizeHeight" : {
-      "float" : 0
+    "almostMaximizeHeight": {
+      "float": 0
     },
-    "almostMaximizeWidth" : {
-      "float" : 0
+    "almostMaximizeWidth": {
+      "float": 0
     },
-    "alternateDefaultShortcuts" : {
-      "bool" : true
+    "alternateDefaultShortcuts": {
+      "bool": true
     },
-    "altThirdCycle" : {
-      "int" : 0
+    "altThirdCycle": {
+      "int": 0
     },
-    "applyGapsToMaximize" : {
-      "int" : 0
+    "applyGapsToMaximize": {
+      "int": 0
     },
-    "applyGapsToMaximizeHeight" : {
-      "int" : 0
+    "applyGapsToMaximizeHeight": {
+      "int": 0
     },
-    "attemptMatchOnNextPrevDisplay" : {
-      "int" : 0
+    "attemptMatchOnNextPrevDisplay": {
+      "int": 0
     },
-    "autoMaximize" : {
-      "int" : 0
+    "autoMaximize": {
+      "int": 0
     },
-    "cascadeAllDeltaSize" : {
-      "float" : 30
+    "cascadeAllDeltaSize": {
+      "float": 30
     },
-    "centeredDirectionalMove" : {
-      "int" : 0
+    "centeredDirectionalMove": {
+      "int": 0
     },
-    "centerHalfCycles" : {
-      "int" : 0
+    "centerHalfCycles": {
+      "int": 0
     },
-    "cornerSnapAreaSize" : {
-      "float" : 20
+    "cornerSnapAreaSize": {
+      "float": 20
     },
-    "curtainChangeSize" : {
-      "int" : 0
+    "curtainChangeSize": {
+      "int": 0
     },
-    "disabledApps" : {
-
+    "disabledApps": {},
+    "footprintAlpha": {
+      "float": 0.30000001192092896
     },
-    "footprintAlpha" : {
-      "float" : 0.30000001192092896
+    "footprintBorderWidth": {
+      "float": 2
     },
-    "footprintBorderWidth" : {
-      "float" : 2
+    "footprintColor": {},
+    "footprintFade": {
+      "int": 0
     },
-    "footprintColor" : {
-
+    "fullIgnoreBundleIds": {},
+    "gapSize": {
+      "float": 0
     },
-    "footprintFade" : {
-      "int" : 0
+    "hideMenubarIcon": {
+      "bool": true
     },
-    "fullIgnoreBundleIds" : {
-
+    "ignoredSnapAreas": {
+      "int": 0
     },
-    "gapSize" : {
-      "float" : 0
+    "launchOnLogin": {
+      "bool": true
     },
-    "hideMenubarIcon" : {
-      "bool" : true
+    "minimumWindowHeight": {
+      "float": 0
     },
-    "ignoredSnapAreas" : {
-      "int" : 0
+    "minimumWindowWidth": {
+      "float": 0
     },
-    "launchOnLogin" : {
-      "bool" : true
+    "moveCursor": {
+      "int": 0
     },
-    "minimumWindowHeight" : {
-      "float" : 0
+    "moveCursorAcrossDisplays": {
+      "int": 0
     },
-    "minimumWindowWidth" : {
-      "float" : 0
+    "notifiedOfProblemApps": {
+      "bool": false
     },
-    "moveCursor" : {
-      "int" : 0
+    "obtainWindowOnClick": {
+      "int": 0
     },
-    "moveCursorAcrossDisplays" : {
-      "int" : 0
+    "relaunchOpensMenu": {
+      "bool": false
     },
-    "notifiedOfProblemApps" : {
-      "bool" : false
+    "resizeOnDirectionalMove": {
+      "bool": false
     },
-    "obtainWindowOnClick" : {
-      "int" : 0
+    "screenEdgeGapBottom": {
+      "float": 0
     },
-    "relaunchOpensMenu" : {
-      "bool" : false
+    "screenEdgeGapLeft": {
+      "float": 0
     },
-    "resizeOnDirectionalMove" : {
-      "bool" : false
+    "screenEdgeGapRight": {
+      "float": 0
     },
-    "screenEdgeGapBottom" : {
-      "float" : 0
+    "screenEdgeGapsOnMainScreenOnly": {
+      "bool": false
     },
-    "screenEdgeGapLeft" : {
-      "float" : 0
+    "screenEdgeGapTop": {
+      "float": 0
     },
-    "screenEdgeGapRight" : {
-      "float" : 0
+    "shortEdgeSnapAreaSize": {
+      "float": 145
     },
-    "screenEdgeGapsOnMainScreenOnly" : {
-      "bool" : false
+    "showAllActionsInMenu": {
+      "int": 0
     },
-    "screenEdgeGapTop" : {
-      "float" : 0
+    "sixthsSnapArea": {
+      "int": 0
     },
-    "shortEdgeSnapAreaSize" : {
-      "float" : 145
+    "sizeOffset": {
+      "float": 0
     },
-    "showAllActionsInMenu" : {
-      "int" : 0
+    "snapEdgeMarginBottom": {
+      "float": 5
     },
-    "sixthsSnapArea" : {
-      "int" : 0
+    "snapEdgeMarginLeft": {
+      "float": 5
     },
-    "sizeOffset" : {
-      "float" : 0
+    "snapEdgeMarginRight": {
+      "float": 5
     },
-    "snapEdgeMarginBottom" : {
-      "float" : 5
+    "snapEdgeMarginTop": {
+      "float": 5
     },
-    "snapEdgeMarginLeft" : {
-      "float" : 5
+    "snapModifiers": {
+      "int": 0
     },
-    "snapEdgeMarginRight" : {
-      "float" : 5
+    "specifiedHeight": {
+      "float": 1050
     },
-    "snapEdgeMarginTop" : {
-      "float" : 5
+    "specifiedWidth": {
+      "float": 1680
     },
-    "snapModifiers" : {
-      "int" : 0
+    "stageSize": {
+      "float": 190
     },
-    "specifiedHeight" : {
-      "float" : 1050
+    "subsequentExecutionMode": {
+      "int": 1
     },
-    "specifiedWidth" : {
-      "float" : 1680
+    "SUEnableAutomaticChecks": {
+      "bool": true
     },
-    "stageSize" : {
-      "float" : 190
+    "todo": {
+      "int": 2
     },
-    "subsequentExecutionMode" : {
-      "int" : 1
+    "todoApplication": {},
+    "todoMode": {
+      "bool": false
     },
-    "SUEnableAutomaticChecks" : {
-      "bool" : true
+    "todoSidebarWidth": {
+      "float": 400
     },
-    "todo" : {
-      "int" : 2
+    "traverseSingleScreen": {
+      "int": 0
     },
-    "todoApplication" : {
-
+    "unsnapRestore": {
+      "int": 0
     },
-    "todoMode" : {
-      "bool" : false
-    },
-    "todoSidebarWidth" : {
-      "float" : 400
-    },
-    "traverseSingleScreen" : {
-      "int" : 0
-    },
-    "unsnapRestore" : {
-      "int" : 0
-    },
-    "windowSnapping" : {
-      "int" : 2
+    "windowSnapping": {
+      "int": 2
     }
   },
-  "shortcuts" : {
-    "center" : {
-      "keyCode" : 8,
-      "modifierFlags" : 1572864
+  "shortcuts": {
+    "center": {
+      "keyCode": 8,
+      "modifierFlags": 1572864
     },
-    "restore" : {
-      "keyCode" : 15,
-      "modifierFlags" : 1572864
+    "restore": {
+      "keyCode": 15,
+      "modifierFlags": 1572864
     }
   },
-  "version" : "63"
+  "version": "63"
 }
