chore: readd comments to npmrc
Signed-off-by: Logan McAnsh <logan@mcan.sh>

--- a/.npmrc
+++ b/.npmrc
@@ -1,13 +1,30 @@
+# registries
+# @mcansh:registry=https://npm.pkg.github.com
+# @remix-run:registry=https://npm.remix.run
 //npm.pkg.github.com/:_authToken=${GITHUB_REGISTRY_TOKEN}
 //registry.npmjs.org/:_authToken=${NPM_REGISTRY_TOKEN}
 //npm.remix.run/:_authToken=${REMIX_TOKEN}
+
+# save exact package version instead of semver range
+# save-exact=true
+# save-prefix=
+
+# commit message which is used by npm version when creating version commit.
 message=%s
+
+# don't prepend a `v` to the git tag of the release
 tag-version-prefix=
+
+# defaults for npm init
 init-author-name=Logan McAnsh
 init-author-email=logan@mcan.sh
 init-author-url=https://mcan.sh
 init-version=0.1.0
 init-license=MIT
+
+# sign commits and tags with gpg
 sign-git-commit=true
 sign-git-tag=true
+
+# enough of `npm install --legacy-peer-deps` already
 legacy-peer-deps=true
